<resources>
    <string name="app_name">MediRaj</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="user_login">User Login</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="userName_error">"Please Enter Your Name!"</string>
    <string name="userEmail_error">"Please Enter Your Email!"</string>
    <string name="userEmail_error_valid">"Please Enter Valid Email!"</string>
    <string name="userPhone_error">"Please Enter Your Phone Number!"</string>
    <string name="userPassword_error">"Please Enter Your Password!"</string>
    <string name="userPassword_con_error">"Password Did not Match!"</string>
    <string name="userPhone_error_valid">Please Enter Valid Phone Number</string>
    <string name="userPhone_error_number">Phone Number Start with 0</string>
    <string name="internet_connect_msg">Please Connect to Internet</string>
    <string name="please_wait">please Wait&#8230;</string>
    <string name="category_image">category Image</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="recover_your_password">Enter the phone number associate with your account and we\'ll send an OTP code to your phone number.</string>
    <string name="send_instruction">Send Reset Code</string>
    <string name="new_password">Enter New Password</string>
    <string name="submit">Submit</string>
    <string name="reset_msg">Please enter the reset code sent to</string>
    <string name="address_not_available">User address not available</string>
    <string name="address_not_gender">not available</string>
    <string name="address_not_dob">not available</string>
    <string name="address">Address</string>
    <string name="dob">Date of Birth</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="medi_service">Medicine Service</string>
    <string name="ds">Diagnostic Service</string>
    <string name="no_data_found">No Data Found</string>
    <string name="moneySymbol">\u09F3</string>
    <string name="addtocart">Added to cart</string>
    <string name="removecart">Remove from cart</string>
    <string name="error">Failed to connect, connect to internet!</string>
    <string name="doctorlist">Doctor List</string>
    <string name="hp">Home Pathology</string>
    <string name="md">Medical Device</string>
    <string name="order">Checkout</string>
    <string name="please_enter_your_address">Please Enter Your Address</string>
    <string name="confirm_order">Confirm order</string>
    <string name="total_amount">Total Amount</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="subtotal">Subtotal</string>
    <string name="order_summary">Order Summary</string>
    <string name="total_price">Total Price</string>
    <string name="order_price">Order price</string>
    <string name="order_items">Order items</string>
    <string name="order_item">Order Item</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="alert_logout">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="order_con_msg">Are you confirming your order?</string>
    <string name="rajshahi_police">Rajshahi Metropolitan Police Headquarters</string>
    <string name="fire_service">Fire Service Station Rajshahi</string>
    <string name="emegency_contact">Rajshahi Emegency Contact</string>
    <string name="bb">BloodBank</string>
    <string name="confirm_request">Confirm Request</string>
    <string name="contact">Contact</string>
    <string name="user_name">Name</string>
    <string name="br">Blood Request</string>
    <string name="descripsation">Descripsation</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="place">Place</string>
    <string name="medicine">Medicine</string>
    <string name="upload_prescription">upload Prescription</string>
    <string name="or">OR</string>
    <string name="medicine_name_optional">Medicine Name(optional)</string>
    <string name="send_now">Send now</string>
    <string name="call_now">Call now</string>
    <string name="online_doctor">Online Doctor</string>
    <string name="contact_mediraj">You will be contacted by Mediraj soon with order details.</string>
    <string name="your_order_is_complete">Your order is complete</string>
    <string name="doctor_detail">Doctor Details</string>
    <string name="clinic_service">Clinic Services</string>
    <string name="book">Book</string>
    <string name="patient_information">Patient information:</string>
    <string name="purpose_of_clinic_booking">Purpose of clinic booking</string>
    <string name="clinic_discreation">N:B: You can also change patient information such as name, contact and address</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="clinic_information">Clinic information:</string>
    <string name="clinic_bookin">Clinic Booking</string>
    <string name="experience">Experience</string>
    <string name="doctor_appointment">Doctor Schedule</string>
    <string name="visiting_fess">Visiting Fess</string>
    <string name="visiting_days">Visiting Days</string>
    <string name="visiting_hours">Visiting Hours</string>
    <string name="chamber">Chamber</string>
    <string name="about_doctor">About Doctor</string>
    <string name="book_appointment">Book Appointments</string>
    <string name="select_month">Select Month</string>
    <string name="enter_date">Plaese select a date</string>
    <string name="enter_time">Please enter a time Schedule</string>
    <string name="doctor_information">Doctor information</string>
    <string name="mediraj">mediraj</string>
    <string name="notification">Notification</string>
    <string name="offer">Offer</string>
    <string name="special_offer">Special Offer</string>
    <string name="promotional_offer">Promotional Offer</string>
    <string name="help">Help</string>
    <string name="about_us">About Us</string>
    <string name="emergency_call">Emergency Call</string>
    <string name="development_team">Development Team</string>
    <string name="dev">Developers</string>
    <string name="log_out">Log out</string>
    <string name="profile">Profile</string>
    <string name="account">Account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="other">Other</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="blood_request_form">Blood request form:</string>
    <string name="card_added">cart added</string>
    <string name="add_to_cart">add to cart</string>
    <string name="adecoder">aDecoder</string>
    <string name="contact_us">Contact Us</string>
    <string name="call">Call</string>
    <string name="what_med">1. What is MediRaj?</string>
    <string name="med_info">Mediraj is an online medical service provider. Where you will get all your medical services.</string>
    <string name="bel_med">2. Is MediRaj reliable?</string>
    <string name="bel_info">Mediraj is certainly believable. Because Mediraj is giving 100% guarantee in terms of medical quality. Moreover special discounts from the prescribed list price. So there is no possibility of quality and financial loss.</string>
    <string name="cost_med">3. Is the cost much higher in MediRaj?</string>
    <string name="cost_info">Of course not. The cost is much lower in Mediraj. Because there are special discounts on all Mediraj services. So Mediraj is giving 100% guarantee of quality and not being financially damaged.</string>
    <string name="why_med">4. Why would you take service from Mediraj?</string>
    <string name="why_info">At this time it has become very difficult to get medical services. Because there are risks to health as well as risks of financial loss. When it comes to financial loss, time, effort and health risks, Mediraj will consider the best.</string>
    <string name="en">English</string>
    <string name="setting">Setting</string>
    <string name="bn">বাংলা</string>
    <string name="language">Language</string>
    <string name="lan_change">Language change to english</string>
    <string name="da">Doctor appointment</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="more">More</string>
    <string name="version">Version</string>
    <string name="intro_logo">intro logo</string>
    <string name="theme">Dark Theme</string>
    <string name="order_status">Order Status:</string>
    <string name="order_date"><b>Ordered Date:</b></string>
    <string name="med_name"><b>Medicine Name:</b></string>



</resources>