<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--        <com.google.android.material.card.MaterialCardView-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_gravity="center_vertical"-->
        <!--            android:layout_marginStart="10dp"-->
        <!--            android:layout_marginEnd="10dp"-->
        <!--            android:layout_marginBottom="10dp"-->
        <!--            android:padding="10dp"-->
        <!--            app:cardCornerRadius="10dp"-->
        <!--            app:cardElevation="1dp">-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:fontFamily="@font/noto_sans"
                android:text="@string/user_login"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/testCaseSix"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                app:boxStrokeColor="#EDEFEE"
                android:hint="@string/phone_number">

                <com.santalu.maskara.widget.MaskEditText
                    android:id="@+id/userPhone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:fontFamily="@font/noto_sans"
                    android:forceHasOverlappingRendering="false"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:textColor="@color/black"
                    app:mask="+88 #####-######"
                    tools:targetApi="n" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/testCaseFour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/password"
                app:boxStrokeColor="#EDEFEE"
                android:imeOptions="actionNext"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:fontFamily="@font/noto_sans"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgotPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:fontFamily="@font/noto_sans"
                android:text="@string/forgot_password"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/purple_700"
                app:strokeColor="@color/purple_700"
                app:strokeWidth="0dp"
                android:fontFamily="@font/noto_sans"
                android:padding="11dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:elevation="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight=".40"
                    android:background="@color/battleship_grey" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".2"
                    android:fontFamily="@font/noto_sans"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="OR" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight=".40"
                    android:background="@color/battleship_grey" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signUpBtn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#FFB400"
                android:fontFamily="@font/noto_sans"
                android:padding="11dp"
                android:text="@string/sign_up"
                android:layout_margin="10dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:elevation="5dp"
                app:strokeColor="#FFB400" />
        </LinearLayout>
        <!--        </com.google.android.material.card.MaterialCardView>-->
    </ScrollView>
</RelativeLayout>